packages/typ/tests/fixtures/diagnostics/0205_adt_record_field_int_bool_08.ml.expected
File "0205_adt_record_field_int_bool_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0205_adt_record_field_int_bool_08 is not a valid module name.

File "0205_adt_record_field_int_bool_08.ml", line 2, characters 30-34:
2 | let _ : rec_theta = { score = true; live = false }
                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
