packages/typ/tests/fixtures/diagnostics/0205_adt_record_field_int_bool_08.ml
type rec_theta = { score : int; live : bool }
let _ : rec_theta = { score = true; live = false }
